@@ -1,3 +1,10 @@
+2001-09-08  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-object.c: Avoid allocating extra memory block for name.
+	* elf/dl-close.c (_dl_close): Don't free l_libname if it is no
+	allocated separately.
+	* elf/dl-load.c (_dl_map_object_from_fd): Likewise.
+
 2001-09-08  H.J. Lu  <hjl@gnu.org>
 
 	* po/zh_TW.po: Fix a typo.
